# Lease-Doc-Parsing

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
src/: app.py  lease.py
